@@ -1,3 +1,7 @@
+2005-08-06 15:56 Mike Park  <mike.park@nasa.gov>
+
+	* src/ring.c (ringTriangle) return triangle info.
+
 2005-08-06 15:22 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed the
